fix light/dark mode switcher

--- a/dark.css
+++ b/dark.css
@@ -36,6 +36,10 @@ body {
     text-align: center;
 }
 
+h1 {
+    color: white;
+}
+
 button {
     height: 50px;
     width: 350px;
